Agredado nuevos estilos

--- a/mern-crud-frontend/src/components/Header/Header.module.css
+++ b/mern-crud-frontend/src/components/Header/Header.module.css
@@ -13,7 +13,7 @@
   left: 0;
   right: 0;
   height: 80px; /* Ajusta la altura según tus necesidades */
-  background-color: #333; /* Color de fondo del encabezado */
+  /* background-color: #020213;Color de fondo del encabezado */
   color: #fff; /* Color del texto */
   display: flex;
   justify-content: space-between;
