--- a/mern-crud-frontend/src/components/ItemFormModal/ItemFormModal.module.css
+++ b/mern-crud-frontend/src/components/ItemFormModal/ItemFormModal.module.css
@@ -1,44 +1,66 @@
-/* ItemFormModal.module.css */
-.itemFormContainer {
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .formLabel {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  .formInput {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .formCheckbox {
-    margin-right: 5px;
-  }
-  
-  .formButton {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  .formButton:hover {
-    background-color: #0056b3;
-  }
-  
+/* Estilos para el fondo de la página */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+/* Estilos para el contenedor del modal */
+.modal {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  max-width: 80%;
+  overflow: hidden;
+  position: relative;
+}
+
+/* Estilos para el encabezado del modal */
+.modal-header {
+  background: #3498db;
+  color: #fff;
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Estilos para el título del modal */
+.modal-header h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+/* Estilos para el botón de cierre */
+.modal-header button {
+  background: transparent;
+  border: none;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+/* Estilos para el contenido del modal */
+.modal-content {
+  padding: 16px;
+}
+
+/* Agregar transición para suavizar la apertura y cierre del modal */
+.modal-entering,
+.modal-exiting,
+.modal-exited {
+  transition: opacity 0.3s ease;
+  opacity: 0;
+}
+
+.modal-entered {
+  opacity: 1;
+}
