--- a/mern-crud-frontend/src/views/Home.module.css
+++ b/mern-crud-frontend/src/views/Home.module.css
@@ -2,19 +2,19 @@
 body {
   margin: 0;
   padding: 0;
-  /* background: linear-gradient(135deg, #5d13b3, #eb4917); */
-  background-color: #921111;
+  background: linear-gradient(135deg, #a253fc, #0a12a6);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: Arial, sans-serif;
+  font-family:'Courier New', Courier, monospace;
   color: #fff; /* Color de texto en la app */
   height: 100vh;
   overflow: hidden;
 }
 .container {
   width: 100%;
-  background-color: #fbfbff;
+  height: 100vh;
+  background-color: #1e1d1f;
   margin: 0 auto;
   display: flex; 
   flex-direction: column;/* Utiliza flexbox para dividir la vista */
